# graph-topology-in-routing-problems

./: .gitignore  .readthedocs.yml  README.md  commit_test.py  file_name_generator.rst  graph_generator.rst  grapher.rst  plotter.rst  process_graphs.py  pyproject.toml  requirements.txt  utils.rst
VRP/: Solver_TSP.ipynb  graphs_data.csv  requirements.txt  test.py  work_with_graphs.ipynb
data/: random_points.csv
data/results/: R41485.pkl  R62145.pkl
docs/: Makefile  generate_rst.py  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.js
docs/source/modules/: city_tests.rst  common.rst  data_loader.rst  formulas.rst  pfa.rst  plot_functions.rst
examples/: examples.ipynb  figures.ipynb  logariphmics.ipynb  pipeline.ipynb
examples/graphs/: graph_R1430508.graphml
gsber/: grapher.py  plotter.py  utils.py
ride/: city_tests.py  common.py  data_loader.py  file_name_generator.py  formulas.py  graph_generator.py  grapher.py  pfa.py  plot_functions.py  plotter.py  utils.py
tests/: city_tests.py  test_city_few_alg.py
tmp-main/: PARIS_1.pkl  city_tests.py  common.py  data (3)  degree_destrib.ipynb  file_name_generator.py  get_mean_clusters.py  graph_generator.py  nx_tests.py  pfa.py  requirements.txt  run.sh  test_big_dst.ipynb  test_city.py  test_city_few_alg.py  test_city_swapp.py  test_few_city_post_processing.ipynb  test_synt.py  test_synt_fixed_alpha.py  test_synt_fixed_alpha_paths.py  test_synt_with_degree_destrib.py  three_phase_test.ipynb
